#DEOPSCSW-672 : Dolly : Replace mutable collections (Map, Set) with immutable ones wherever possible.